create swagger for transaksi
